fix: :bug: AT-03: Fix button displacement issue found on Firefox desktop browser.

--- a/src/components/header/TheHeader.module.css
+++ b/src/components/header/TheHeader.module.css
@@ -164,6 +164,7 @@ nav [aria-current='page'] {
   padding: 0;
   color: inherit;
   cursor: pointer;
+  width: max-content;
 }
 
 .sub-menu--button-arrow-down::after {
